Fix bugs where unique_ptr is used with T and not T[].

--- a/Heap Array/Heap Array.vcxproj
+++ b/Heap Array/Heap Array.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{050D4330-20C2-437B-8CA5-DB7081BA719F}</ProjectGuid>
     <RootNamespace>HeapArray</RootNamespace>
-    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -111,11 +111,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\Heap Array Test\Heap Array Test\HeapArray.cpp" />
+    <ClCompile Include="HeapArray.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\Heap Array Test\Heap Array Test\HeapArray.h" />
+    <ClInclude Include="HeapArray.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
