--- a/Heap Array/Heap Array.vcxproj.filters
+++ b/Heap Array/Heap Array.vcxproj.filters
@@ -18,12 +18,12 @@
     <ClCompile Include="Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Heap Array Test\Heap Array Test\HeapArray.cpp">
+    <ClCompile Include="HeapArray.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\Heap Array Test\Heap Array Test\HeapArray.h">
+    <ClInclude Include="HeapArray.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
